[gd_scene load_steps=3 format=3 uid="uid://dfvil05c2giuc"]

[ext_resource type="Script" path="res://addons/bitmap_editor/editor.gd" id="1_jbnsg"]
[ext_resource type="Script" path="res://addons/bitmap_editor/editor_texture.gd" id="2_d1hw2"]

[node name="Editor" type="PanelContainer"]
offset_right = 54.0
offset_bottom = 30.0
script = ExtResource("1_jbnsg")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Resizer" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Label" type="Label" parent="VBox/Resizer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Size"

[node name="X" type="SpinBox" parent="VBox/Resizer"]
layout_mode = 2
size_flags_horizontal = 3
prefix = "x:"
select_all_on_focus = true

[node name="Y" type="SpinBox" parent="VBox/Resizer"]
layout_mode = 2
size_flags_horizontal = 3
prefix = "y:"
select_all_on_focus = true

[node name="Texture" type="ColorRect" parent="VBox"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 4
color = Color(0, 0, 0, 1)
script = ExtResource("2_d1hw2")

[node name="Shortcuts" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Fill" type="Button" parent="VBox/Shortcuts"]
layout_mode = 2
size_flags_horizontal = 3
text = "Fill"

[node name="Clear" type="Button" parent="VBox/Shortcuts"]
layout_mode = 2
size_flags_horizontal = 3
text = "Clear
"

[connection signal="value_changed" from="VBox/Resizer/X" to="." method="_on_size_changed" unbinds=1]
[connection signal="value_changed" from="VBox/Resizer/Y" to="." method="_on_size_changed" unbinds=1]
[connection signal="pressed" from="VBox/Shortcuts/Fill" to="." method="_set_all_bits" binds= [true]]
[connection signal="pressed" from="VBox/Shortcuts/Clear" to="." method="_set_all_bits" binds= [false]]
